tests/models/struct/unnamed/string/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    String
);
fn main() {}
